<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoipTest</string>
    <string name="action_settings">Settings</string>
    <string name="reg_status">Unregistered</string>
    <string name="hang_up">Hang Up</string>
    <string name="onHangUp">onHangUp</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="answer">Answer</string>
    <string name="onMute">onMute</string>
    <string name="onSilent">onSilent</string>
    <string name="dialing">Dialing&#8230;</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="domain">Domain</string>
    <string name="proxy">Proxy</string>
    <string name="port">Port</string>
    <string name="default_sip_port">5060</string>
    <string name="save">Save</string>
    <string name="onSave">onSave</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_not_applied">Unable to apply settings</string>
    <string name="settings_already_saved">Settings already saved</string>
    <string name="reg_failed">Unable to register with new settings</string>
    <string name="num_2">2</string>
    <string name="abc">ABC</string>
    <string name="onBtnClick">onBtnClick</string>
    <string name="error_unable_to_dial">Unable to dial. Check your settings.</string>
    <string name="error_no_num_to_dial">Enter a number to dial</string>
    <string name="start_call_time">00:00</string>
    <string name="error_invalid_call_session">Invalid call session</string>
    <string name="onAnswer">onAnswer</string>
    <string name="enable_ice">Enable ICE</string>
    <string name="enable_stun_turn">Enable STUN/TURN</string>
    <string name="onCbStunTurn">onCbStunTurn</string>
    <string name="server_address">Server Address</string>
    <string name="default_stun_port">3478</string>
    
    <color name="color_dark">#161C27</color>
    <color name="color_light">#4D6288</color>
    

</resources>
