<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:clickable="true"
    android:gravity="center"
    android:background="@drawable/sel_keypad"
    android:onClick="@string/onBtnClick" >
    
    <TextView android:id="@+id/id_tv_num" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_2"
        android:textStyle="bold"
        android:textSize="23sp"
        android:textColor="#dddddd" />
    
    <TextView android:id="@+id/id_tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abc"
        android:textColor="#dddddd"
        android:textSize="12sp" />

</LinearLayout>
