<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    
    <FrameLayout android:id="@+id/id_layout_video_call" 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <ImageView android:id="@+id/id_image_remote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/abc"
            android:src="@drawable/avatar_48"
            android:layout_gravity="center" />
        
        <FrameLayout android:id="@+id/id_layout_remote_video"
 	        android:layout_width="match_parent"
    	    android:layout_height="match_parent"
    	    android:visibility="visible" >
        </FrameLayout>

        <FrameLayout 
            android:minHeight="90dp" 
            android:minWidth="90dp" 
            android:layout_margin="4dp" 
            android:padding="4dp" 
            android:layout_height="94dp" 
            android:layout_width="94dp"
            android:layout_gravity="right">
        	<FrameLayout 
        	    android:id="@+id/id_layout_local_video" 
        	    android:layout_height="fill_parent" 
        	    android:layout_width="fill_parent" />
    	</FrameLayout>
        
	    <FrameLayout
		    android:layout_width="fill_parent"
		    android:layout_height="130dp"
		    android:layout_gravity="bottom" android:gravity="center"
		    android:orientation="vertical" >
	
		    <LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="match_parent"
			    android:layout_gravity="center" android:gravity="center"
			    android:orientation="vertical" >
		
		        <TextView android:id="@+id/id_callee"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="bottom|center_horizontal"
			        android:text=""/>
		
			    <TextView android:id="@+id/id_call_status"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/dialing" 
			        android:layout_marginBottom="5dp" />
			
			    <TextView android:id="@+id/id_tv_timer"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/start_call_time"
			        android:textSize="30sp" />
			
			    <FrameLayout android:id="@+id/id_layout_button" 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp" >
		
			        <Button android:id="@+id/id_btn_mute" 
			            android:layout_width="48dp"
				        android:layout_height="48dp"
				        android:background="@drawable/mute"
				        android:onClick="@string/onMute"
				        android:visibility="gone" />
		
			        <Button android:id="@+id/id_btn_silent" 
			            android:layout_width="48dp"
				        android:layout_height="48dp"
				        android:background="@drawable/phone_ringing_cancel"
				        android:onClick="@string/onSilent"
				        android:visibility="gone" />
			        
			        <Button android:id="@+id/id_btn_answer" 
			            android:layout_width="48dp"
				        android:layout_height="48dp"
				        android:background="@drawable/phone_pick_up_48"
				        android:onClick="@string/onAnswer"
				        android:layout_gravity="center"
				        android:visibility="gone" />
		
			        <Button android:id="@+id/id_btn_hang_up"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="right"
			            android:onClick="@string/onHangUp"
			            android:background="@drawable/phone_hang_up_48" />
			        
			    </FrameLayout>
			</LinearLayout>
		</FrameLayout>
    </FrameLayout>
</LinearLayout>
